brought in working labs

--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -1,1 +1,81 @@
-Start here!
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <title>Allison and Jasmine's Assignment 1</title>
+    <link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@200;500&display=swap" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+  </head>
+
+<body>
+  <div class="header">
+    <h1>Here is our header<img src="testudo_rs.jpg" alt="Testudo statue, UMD's mascot"></h1>
+  </div>
+  <div class= "wrapper">
+      <div class= "container">
+          <div class="image">
+            <img src ="grad_photo.jpg" alt="We are finally graduating, here is a photo">
+            <p>This is a photo of my graduation</p>
+          </div>
+          <div class="name">
+            <h2>Hire me!</h2>
+            <p>Graduating this past year, I had a 4.0 GPA and was the president of the Art Appreciation Society (AAS for short). I majored in Instagram Studies and minored in Colors. Please hire me I am broke :)</p>
+            <ol>
+              <li>
+                <h2>Word Skills</h2>
+                <div class="description">
+                <p>I am really good at creating word documents (not writing them)</p>
+                <ul class="list">
+                  <li>
+                    I open the app
+                  </li>
+                  <li>
+                    I Create New document
+                  </li>
+                  <li>
+                    I close the app
+                  </li>
+                </ul>
+              </div>
+              </li>
+              <li>
+                <h2>Photography Skills</h2>
+                <div class="description">
+                <p>Photography skills on fleek</p>
+                <ul class="list">
+                  <li>
+                    I take selfies on Photo Booth
+                  </li>
+                  <li>
+                    I take pictures of my dog on my iPod Shuffle
+                  </li>
+                  <li>
+                    I can whisper to photos
+                  </li>
+                </ul>
+              </div> 
+              </li>
+              <li>
+                <h2>Quoting Skills</h2>
+                <div class="description">
+                <p>I can quote vines like the bible</p>
+                <ul class="list">
+                  <li>
+                    An avocado! Thaaaanks
+                  </li>
+                  <li>
+                    Road work ahead?! I sure hope it does
+                  </li>
+                  <li>
+                    Ahhh stop, I coulda dropped my croissant
+                  </li>
+                </ul>
+              </div>
+              </li>
+            </ol>
+      </div>
+      </div>
+  </div>
+
+</body>
+</html>
