--- a/public/lab_1/index.html
+++ b/public/lab_1/index.html
@@ -1,7 +1,18 @@
-    fruits list:
-    apple
-    Hello world
-    orange
-    pomelo
-    PULL REQUEST
-    Lorem ipsum generator: https://www.lipsum.com/
+<!DOCTYPE html>
+<html lang ="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Allison Siegel's Lab 1</title>
+  </head>
+  <body>
+    <h1>Allison Siegel's First Lab!</h1>
+    <h2>Pug in Costume?</h2>
+    <img src="images/pup-red.jpg" alt="My test image">
+    <p>The best dog costumes</p>   
+    <ul> 
+        <li>pumpkin</li>
+        <li>astronaut</li>
+        <li>ghost</li>
+    </ul>
+  </body>
+</html>
