--- a/public/lab_6/index.html
+++ b/public/lab_6/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <meta charset="utf-8">
+    <title>Allison Siegel's Lab 6</title>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
@@ -12,6 +14,7 @@
     <div class="wrapper">
       <div class="container flex-outer">
         <div class="header">
+            <h1>Allison Siegel's Lab 6</h1>
         </div>
         <form>
           <button
