idk man i tried my best

--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -1,25 +1,37 @@
-<<<<<<< HEAD
-<<<<<<< Updated upstream
-=======
-=======
->>>>>>> b1e807f7d88e39018b9a015ade74fe89bb0c9f40
-<!--
-    - set this up as an HTML page with correct wrapper and container
-    - this is to make sure your chart isn't Huge when it appears
-    - Import your stylesheet in the head
-    - Import your bar chart from https://canvasjs.com/html5-javascript-bar-chart/
-    - Import script.js before your body closing tag
-    - add a div with an id of chartContainer
-<<<<<<< HEAD
-    - TRY THIS: type "doc" at the top of this file and press "tab" for Emmet autocomplete support
--->
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <title>Allison Siegel Lab 7</title>
+    <link href="styles.css" rel="stylesheet">
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+  <div class ="wrapper">
+      <div class = "container flex-outer">
+        <div class = "header">
+        <h1>Allison Siegel Lab 7</h1>
+        </div>
+        <form>
+            <button
+              type="submit"
+              class="submitButton"
+              name="submitButton"
+            >Create A Checklist</button>
+          </form>
+    <div id="chartContainer">
 
->>>>>>> Stashed changes
-=======
+    </div>
+   
+      </div>
+  </div>
+  <script src = "script.js"></script>
+  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
 
-    - TRY THIS: type "doc" at the top of this file and press "tab" for Emmet autocomplete support
--->
+</body>
 
-
->>>>>>> b1e807f7d88e39018b9a015ade74fe89bb0c9f40
