--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
     <title>Allison Siegel Lab 7</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet" type ="text/css">
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
@@ -16,22 +15,19 @@
         <div class = "header">
         <h1>Allison Siegel Lab 7</h1>
         </div>
+        <div id="chartContainer">
+        </div>
         <form>
             <button
               type="submit"
               class="submitButton"
               name="submitButton"
-            >Create A Checklist</button>
-          </form>
-    <div id="chartContainer">
-
-    </div>
+            >Restaurants</button>
+        </form>
    
       </div>
   </div>
-  <script src = "script.js"></script>
-  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-
-
+  <script src="canvasjs.min.js"></script>
+  <script src="script.js"></script>
 </body>
 
