--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -1,8 +1,8 @@
-<html lang="en-US">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Allison Siegel Lab 7</title>
-    <link href="styles.css" rel="stylesheet" type ="text/css">
+    <link href="styles.css" rel="stylesheet" type ="text/css"/>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
@@ -24,10 +24,9 @@
               name="submitButton"
             >Restaurants</button>
         </form>
-   
       </div>
   </div>
   <script src="canvasjs.min.js"></script>
   <script src="script.js"></script>
 </body>
-
+</html>
